[gd_scene load_steps=23 format=3 uid="uid://c5r06amfsateg"]

[ext_resource type="Script" path="res://Scenes/ui/battle_gui.gd" id="1_7wgbu"]
[ext_resource type="Texture2D" uid="uid://baulnrnwj0y00" path="res://Art/sprites/cursor_hand_new.png" id="2_p07iw"]
[ext_resource type="Theme" uid="uid://bitq02d30r24m" path="res://ui/menu_theme.tres" id="3_eon5h"]
[ext_resource type="PackedScene" uid="uid://4xy38mf8rdnk" path="res://Scenes/ui/animation_component.tscn" id="4_2ww32"]
[ext_resource type="Texture2D" uid="uid://dayliakedilhw" path="res://Art/sprites/Skillcheck GUI/12-0 Clock 2x2.png" id="5_lbamh"]
[ext_resource type="Texture2D" uid="uid://dxu8rm585qydg" path="res://Art/sprites/Skillcheck GUI/12-0 Wedge.png" id="6_qn18h"]
[ext_resource type="Texture2D" uid="uid://ccspjhgeh3o05" path="res://Art/sprites/Skillcheck GUI/12-0 Wedge Slim.png" id="7_pa523"]
[ext_resource type="Texture2D" uid="uid://1a6it20lxggm" path="res://Art/sprites/Cursor/Outline/pointer_toon_a.svg" id="8_44wwh"]
[ext_resource type="Script" path="res://Scenes/ui/skillcheck.gd" id="9_abwty"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="10_1pkcl"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="11_6y2cp"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="12_r2228"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="13_umiu0"]

[sub_resource type="Animation" id="Animation_nsg2u"]
length = 0.001

[sub_resource type="Animation" id="Animation_vwle6"]
resource_name = "pointer_hover"
length = 0.433
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.432899),
"transitions": PackedFloat32Array(1, 1, 2.2974),
"update": 0,
"values": [Vector3(0.15, 0.15, 0.15), Vector3(0.17, 0.17, 0.17), Vector3(0.15, 0.15, 0.15)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vgfiw"]
_data = {
"RESET": SubResource("Animation_nsg2u"),
"pointer_hover": SubResource("Animation_vwle6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vafvi"]
size = Vector2(83.3163, 59.3471)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mwsi5"]
size = Vector2(94.2756, 60.1114)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_acl81"]
size = Vector2(39.2892, 48.5615)

[sub_resource type="Animation" id="Animation_dvh4e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cursor:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.92699]
}

[sub_resource type="Animation" id="Animation_1juto"]
resource_name = "skillcheck_spin"
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wheel:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_lbamh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cursor:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_44wwh")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cursor:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.872665, 3.92699, 7.15585]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_47fjt"]
_data = {
"RESET": SubResource("Animation_dvh4e"),
"skillcheck_spin": SubResource("Animation_1juto")
}

[node name="Battle_GUI" type="Control"]
texture_filter = 6
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7wgbu")

[node name="selector_sprite_player" type="AnimationPlayer" parent="."]
root_node = NodePath("../selector_sprite")
libraries = {
"": SubResource("AnimationLibrary_vgfiw")
}
autoplay = "pointer_hover"

[node name="selector_sprite" type="Sprite3D" parent="."]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, 0, 0)
visible = false
ignore_occlusion_culling = true
offset = Vector2(-80, 120)
flip_h = true
flip_v = true
no_depth_test = true
texture_filter = 0
render_priority = 10
texture = ExtResource("2_p07iw")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_direction = 3
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 66.0
offset_top = -284.0
offset_right = 886.0
offset_bottom = -73.0
grow_vertical = 0
theme = ExtResource("3_eon5h")

[node name="Menu" type="PanelContainer" parent="HBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.937255)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="Main" type="GridContainer" parent="HBoxContainer/Menu"]
layout_direction = 2
layout_mode = 2
columns = 2

[node name="Attack" type="Button" parent="HBoxContainer/Menu/Main"]
layout_mode = 2
text = "⨷ Attack"

[node name="AnimationComponent" parent="HBoxContainer/Menu/Main/Attack" instance=ExtResource("4_2ww32")]

[node name="Echoes" type="Button" parent="HBoxContainer/Menu/Main"]
texture_filter = 2
layout_mode = 2
action_mode = 0
text = "⍟ Echoes"

[node name="AnimationComponent" parent="HBoxContainer/Menu/Main/Echoes" instance=ExtResource("4_2ww32")]

[node name="Items" type="Button" parent="HBoxContainer/Menu/Main"]
texture_filter = 2
layout_mode = 2
action_mode = 0
text = "◎︎ Items"

[node name="AnimationComponent" parent="HBoxContainer/Menu/Main/Items" instance=ExtResource("4_2ww32")]

[node name="Switch" type="Button" parent="HBoxContainer/Menu/Main"]
texture_filter = 2
layout_mode = 2
action_mode = 0
text = "♼ Switch"

[node name="AnimationComponent" parent="HBoxContainer/Menu/Main/Switch" instance=ExtResource("4_2ww32")]

[node name="Escape" type="Button" parent="HBoxContainer/Menu/Main"]
texture_filter = 2
layout_mode = 2
action_mode = 0
text = "↜ Escape"

[node name="AnimationComponent" parent="HBoxContainer/Menu/Main/Escape" instance=ExtResource("4_2ww32")]

[node name="Echoes" type="GridContainer" parent="HBoxContainer/Menu"]
layout_mode = 2
columns = 2

[node name="Switch" type="GridContainer" parent="HBoxContainer/Menu"]
layout_mode = 2
columns = 2

[node name="Items" type="GridContainer" parent="HBoxContainer/Menu"]
layout_mode = 2
columns = 2

[node name="Description" type="PanelContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 2
mouse_default_cursor_shape = 16

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Description"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Description Label" type="RichTextLabel" parent="HBoxContainer/Description/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_eon5h")
bbcode_enabled = true
text = "[color=078ef5]◆[/color] 5  [color=364196]✫[/color] Void
Test description. This ability does something cool."
fit_content = true
scroll_active = false
shortcut_keys_enabled = false

[node name="Skillcheck" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = 121.0
offset_top = 1003.0
offset_right = 121.0
offset_bottom = 1003.0

[node name="Wheel" type="Sprite2D" parent="Skillcheck"]
position = Vector2(31, -31)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_lbamh")

[node name="Good" type="Sprite2D" parent="Skillcheck/Wheel"]
position = Vector2(-56.6666, -136.667)
texture = ExtResource("6_qn18h")

[node name="Good" type="Area2D" parent="Skillcheck/Wheel/Good"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skillcheck/Wheel/Good/Good"]
position = Vector2(-6.81836, -105.561)
rotation = -0.263545
shape = SubResource("RectangleShape2D_vafvi")
debug_color = Color(1, 0.405, 0.3, 0.439216)

[node name="Good2" type="Sprite2D" parent="Skillcheck/Wheel"]
position = Vector2(-116.667, -90)
rotation = -0.511381
texture = ExtResource("6_qn18h")

[node name="Good" type="Area2D" parent="Skillcheck/Wheel/Good2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skillcheck/Wheel/Good2/Good"]
position = Vector2(-14.4575, -103.698)
rotation = -0.263545
shape = SubResource("RectangleShape2D_mwsi5")
debug_color = Color(1, 0.5835, 0.49, 0.47451)

[node name="Great" type="Sprite2D" parent="Skillcheck/Wheel"]
modulate = Color(1, 0.777667, 0.77, 1)
position = Vector2(-66.6667, -113.333)
rotation = -0.506145
scale = Vector2(0.9, 1.2)
texture = ExtResource("7_pa523")

[node name="Great" type="Area2D" parent="Skillcheck/Wheel/Great"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skillcheck/Wheel/Great/Great"]
position = Vector2(0.0671387, -100.096)
shape = SubResource("RectangleShape2D_acl81")
debug_color = Color(0.889405, 0.237402, 0.569274, 0.42)

[node name="Excellent" type="Sprite2D" parent="Skillcheck/Wheel"]
modulate = Color(1, 0.74, 0.943667, 1)
position = Vector2(-3.8147e-05, -133.333)
scale = Vector2(0.9, 1.2)
texture = ExtResource("7_pa523")

[node name="Excellent" type="Area2D" parent="Skillcheck/Wheel/Excellent"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skillcheck/Wheel/Excellent/Excellent"]
position = Vector2(1.1261, -100.496)
shape = SubResource("RectangleShape2D_acl81")
debug_color = Color(0.889405, 0.237402, 0.569274, 0.42)

[node name="Cursor" type="Sprite2D" parent="Skillcheck"]
texture_filter = 6
position = Vector2(31, -31)
rotation = 3.92699
texture = ExtResource("8_44wwh")
offset = Vector2(-16, -16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Skillcheck/Cursor"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_47fjt")
}
autoplay = "skillcheck_spin"

[node name="RayCast2D" type="RayCast2D" parent="Skillcheck/Cursor"]
position = Vector2(-1.32322e-05, -2.13981e-05)
rotation = 0.289725
scale = Vector2(0.3, 0.3)
exclude_parent = false
target_position = Vector2(-249.234, -134.76)
collide_with_areas = true
collide_with_bodies = false
script = ExtResource("9_abwty")

[node name="StateChart" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("10_1pkcl")

[node name="Battle_GUI" type="Node" parent="StateChart"]
script = ExtResource("11_6y2cp")
initial_state = NodePath("Disabled")

[node name="on_gui_select" type="Node" parent="StateChart/Battle_GUI"]
script = ExtResource("12_r2228")
to = NodePath("../Select")
event = &"on_gui_select"
delay_in_seconds = "0.0"

[node name="on_gui_disabled" type="Node" parent="StateChart/Battle_GUI"]
script = ExtResource("12_r2228")
to = NodePath("../Disabled")
event = &"on_gui_disabled"
delay_in_seconds = "0.0"

[node name="on_gui_items" type="Node" parent="StateChart/Battle_GUI"]
script = ExtResource("12_r2228")
to = NodePath("../Items")
event = &"on_gui_items"
delay_in_seconds = "0.0"

[node name="on_gui_skillcheck" type="Node" parent="StateChart/Battle_GUI"]
script = ExtResource("12_r2228")
to = NodePath("../Skillcheck")
event = &"on_gui_skillcheck"
delay_in_seconds = "0.0"

[node name="on_gui_switch" type="Node" parent="StateChart/Battle_GUI"]
script = ExtResource("12_r2228")
to = NodePath("../Switch")
event = &"on_gui_switch"
delay_in_seconds = "0.0"

[node name="Disabled" type="Node" parent="StateChart/Battle_GUI"]
script = ExtResource("13_umiu0")

[node name="on_gui_main" type="Node" parent="StateChart/Battle_GUI/Disabled"]
script = ExtResource("12_r2228")
to = NodePath("../../Main")
event = &"on_gui_main"
delay_in_seconds = "0.0"

[node name="Main" type="Node" parent="StateChart/Battle_GUI"]
script = ExtResource("13_umiu0")

[node name="on_gui_battle" type="Node" parent="StateChart/Battle_GUI/Main"]
script = ExtResource("12_r2228")
to = NodePath("../../Echoes")
event = &"on_gui_echoes"
delay_in_seconds = "0.0"

[node name="Echoes" type="Node" parent="StateChart/Battle_GUI"]
script = ExtResource("13_umiu0")

[node name="on_gui_main" type="Node" parent="StateChart/Battle_GUI/Echoes"]
script = ExtResource("12_r2228")
to = NodePath("../../Main")
event = &"on_gui_main"
delay_in_seconds = "0.0"

[node name="on_gui_select" type="Node" parent="StateChart/Battle_GUI/Echoes"]
script = ExtResource("12_r2228")
to = NodePath("../../Select")
event = &"on_gui_select"
delay_in_seconds = "0.0"

[node name="on_cancel" type="Node" parent="StateChart/Battle_GUI/Echoes"]
script = ExtResource("12_r2228")
to = NodePath("../../Main")
event = &"on_cancel"
delay_in_seconds = "0.0"

[node name="Select" type="Node" parent="StateChart/Battle_GUI"]
script = ExtResource("13_umiu0")

[node name="on_gui_battle" type="Node" parent="StateChart/Battle_GUI/Select"]
script = ExtResource("12_r2228")
to = NodePath("../../Echoes")
event = &"on_gui_echoes"
delay_in_seconds = "0.0"

[node name="on_cancel" type="Node" parent="StateChart/Battle_GUI/Select"]
script = ExtResource("12_r2228")
to = NodePath("../../Main")
event = &"on_cancel"
delay_in_seconds = "0.0"

[node name="Skillcheck" type="Node" parent="StateChart/Battle_GUI"]
script = ExtResource("13_umiu0")

[node name="Switch" type="Node" parent="StateChart/Battle_GUI"]
script = ExtResource("13_umiu0")

[node name="on_gui_main" type="Node" parent="StateChart/Battle_GUI/Switch"]
script = ExtResource("12_r2228")
to = NodePath("../../Main")
event = &"on_gui_main"
delay_in_seconds = "0.0"

[node name="on_cancel" type="Node" parent="StateChart/Battle_GUI/Switch"]
script = ExtResource("12_r2228")
to = NodePath("../../Main")
event = &"on_cancel"
delay_in_seconds = "0.0"

[node name="Items" type="Node" parent="StateChart/Battle_GUI"]
script = ExtResource("13_umiu0")

[node name="on_gui_main" type="Node" parent="StateChart/Battle_GUI/Items"]
script = ExtResource("12_r2228")
to = NodePath("../../Main")
event = &"on_gui_main"
delay_in_seconds = "0.0"

[node name="on_cancel" type="Node" parent="StateChart/Battle_GUI/Items"]
script = ExtResource("12_r2228")
to = NodePath("../../Main")
event = &"on_cancel"
delay_in_seconds = "0.0"
